--- a/renderer/package.json
+++ b/renderer/package.json
@@ -7,12 +7,13 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.2.13",
+    "axios": "^1.6.0",
     "element-plus": "^2.11.8",
-    "axios": "^1.6.0"
+    "vue": "^3.2.13",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-vue": "^5.0.0"
+    "@vitejs/plugin-vue": "^5.0.0",
+    "vite": "^5.0.0"
   }
 }
