--- a/renderer/package.json
+++ b/renderer/package.json
@@ -7,6 +7,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.6.0",
     "element-plus": "^2.11.8",
     "vue": "^3.2.13",
